--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Photo Stream FCM Trainingslager</title>
-    <!--<title>Photo Stream Annas Hochzeit</title>-->
+    <title>Photo Stream Annas Hochzeit</title>
   </head>
   <body>
     <noscript>
